# Observa

./: .gitignore  Cargo.toml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: Cargo.toml  project.json
apps/api/src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  routes.rs
apps/api/src/auth/: claims.rs
apps/api/src/handlers/: auth.rs  health.rs  mod.rs  monitor.rs  notification.rs
apps/api/src/middleware/: auth.rs
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.spec.json  vite.config.mts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: Button.tsx
apps/web/src/features/home/: index.ts
apps/web/src/features/home/sections/: Features.tsx  HeroSection.tsx
apps/web/src/pages/: Home.tsx
apps/web/src/tests/: app.spec.tsx
apps/worker/: Cargo.toml  project.json
apps/worker/src/: config.rs  error.rs  main.rs
