[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../../packages/store" }
poem = "3.1.12"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
arc = "0.0.1"
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "rust_crypto",
] }
argon2 = "0.5.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["serde"] }
chrono = "0.4.42"
