[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
store = { path = "../../packages/store" }
redis = "1.0.2"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.13.1"
